--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -30,6 +30,16 @@
       <img src="" alt="" class="workitem">
       <img src="" alt="" class="workItem">
     </div><!-- ここまでflex__workBox -->
+    <a href="" class="viewMore"></a>
   </section><!-- ここまでwork__wrapper -->
+
+  <section class="skill__wrapper container">
+    <div class="container__item"></div>
+    <div class="container__item"></div>
+    <div class="container__item"></div>
+    <div class="container__item"></div>
+    <div class="container__item"></div>
+    <div class="container__item"></div>
+  </section>
 </body>
 </html>
