--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -25,21 +25,29 @@
     </div><!-- ここまでgnav -->
   </header>
 
-  <section class="work__wrapper">
-    <div class="flex__workBox">
-      <img src="" alt="" class="workitem">
-      <img src="" alt="" class="workItem">
-    </div><!-- ここまでflex__workBox -->
-    <a href="" class="viewMore"></a>
-  </section><!-- ここまでwork__wrapper -->
+  <h2 class="head2 ">work</h2>
 
-  <section class="skill__wrapper container">
-    <div class="container__item"></div>
-    <div class="container__item"></div>
-    <div class="container__item"></div>
-    <div class="container__item"></div>
-    <div class="container__item"></div>
-    <div class="container__item"></div>
+  <!-- モックアップ -->
+  <section class="workWrapp">
+    <div class="workWrapp__list">
+      <img src="" alt="" class="workWrapp__list--item">
+      <img src="" alt="" class="workWrapp__list--item">
+    </div><!-- ここまでworkWrapp__list -->
+
+    <!-- viewmoreボタン -->
+    <a href="" class="viewMore">viewMore>></a>
+  </section><!-- ここまでworkWrapp -->
+
+  <h2 class="head2 ">skill</h2>
+
+  <!-- スキルgrid -->
+  <section class="skillWrapp">
+    <div class="skillWrapp__item">html</div>
+    <div class="skillWrapp__item"></div>
+    <div class="skillWrapp__item"></div>
+    <div class="skillWrapp__item"></div>
+    <div class="skillWrapp__item"></div>
+    <div class="skillWrapp__item"></div>
   </section>
 </body>
 </html>
