--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>morimayuko portfolio</title>
 </head>
 <body>
@@ -42,12 +43,12 @@
 
   <!-- スキルgrid -->
   <section class="skillWrapp">
-    <div class="skillWrapp__item">html</div>
-    <div class="skillWrapp__item"></div>
-    <div class="skillWrapp__item"></div>
-    <div class="skillWrapp__item"></div>
-    <div class="skillWrapp__item"></div>
-    <div class="skillWrapp__item"></div>
+    <div class="skillWrapp__item">html5 / css3</div>
+    <div class="skillWrapp__item">JavaScript</div>
+    <div class="skillWrapp__item">WordPress</div>
+    <div class="skillWrapp__item">Exel</div>
+    <div class="skillWrapp__item">PowerPoint</div>
+    <div class="skillWrapp__item">Word</div>
   </section>
 </body>
 </html>
