--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -66,7 +66,8 @@
       <!-- スキルgrid -->
       <section id="skill" class="skillBox centerBox">
         <div class="skill__list">
-          <div class="skill__list--item"><img src="/images/htmlcss.gif" alt=""></div>
+          <div class="skill__list--item">
+            <img src="/images/htmlcss.gif" alt=""></div>
           <div class="skill__list--item">html5&nbsp;/&nbsp;css3</div>
           <div class="skill__list--item"><img src="/images/scss.gif" alt=""></div>
           <div class="skill__list--item">Scss</div>
@@ -92,6 +93,9 @@
           <div class="skill__list--item">Word</div>
           <div class="skill__list--item"><img src="/images/premierepro.gif" alt=""></div>
           <div class="skill__list--item">PremierePro</div>
+          <div class="skill__list--item"><img src="/images/responsive.gif" alt="" class="res"></div>
+          <div class="skill__list--item">Responsive</div>
+
         </div>
 
         <!-- viewmoreボタン -->
@@ -123,7 +127,7 @@
         <h2 class="head2 h2Img__item">contact</h2>
       </div><!-- h2Img -->
       <section id="contact" class="cbtBox centerBox">
-        <p class="thanks">Thank you for wachingt!<br>
+        <p class="thanks">Thank you for waching!<br>
           Contact is here!</p>
         <!-- viewmoreボタン -->
         <a href="" class="viewMore">viewMore>></a>
@@ -132,7 +136,7 @@
   </div><!-- wrapper -->
 
   <footer>
-    <small>&copy;2021&nbsp;MoriMayuko</small>
+    <p><small>&copy;2021&nbsp;MoriMayuko</small></p>
   </footer>
 </body>
 
