--- a/portfolio/html/about.html
+++ b/portfolio/html/about.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/css/about.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
+  <link rel="stylesheet" type="text/css" href="css/9-1-6.css">
   <title>contents</title>
 </head>
 
@@ -49,7 +50,17 @@
         <img src="/images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
 
         <div class="aboutBox__list--item">
-          <p class="about__list--text">モリマユコ自己紹介</p>
+          <p class="about__list--text">森 麻結子。28歳。独身。<br>
+          趣味はオシャレを楽しむこと。なのでお金がかかることが悩み。<br>
+          24歳で大恋愛の末、栃木県から広島県に移住。<br>
+          広島の県民性が気に入り定住する。なんでも揃うところと方言が好き。<br>
+          2020年の1月で勤務していた店舗が閉店し、前から興味があったweb制作を独学し始める。<br>
+          始めた頃から「デザイン」より「プログラミング」をやりたいと考えていたが、<br>
+          やっていくうちに、その気持ちが確信に変わる。めちゃくちゃ楽しくなる。<br>
+          独学をしていく中でパソコンスクールHA*NAの求職者支援訓練の<br>
+          を知る。デザイン養成科だがプログラミングの基礎も勉強できることを知る。<br>
+          絶対に通うことを決意し受験。合格する。<br>
+        </p>
         </div><!-- aboutBox__list--item -->
       </div><!-- .about__list -->
 
@@ -58,6 +69,24 @@
       <div class="h2Img__history">
         <h2 class="head2 h2Img__item">history</h2>
       </div><!-- h2Img -->
+      <ul class="timeline">
+        <li>
+          <!--線が伸びる基準となるHTML。liを基準として、spanに指定された線を伸ばします。-->
+          <dl>
+            <dt>2000</dt>
+            <dd>内容</dd>
+          </dl>
+          <span class="border-line"></span>
+        </li>
+        <li>
+          <dl>
+            <dt>2002</dt>
+            <dd>内容</dd>
+          </dl>
+          <span class="border-line"></span>
+        </li>
+      </ul>
+
 
       <!-- h2に画像配置 -->
       <div class="h2Img__selfPR">
@@ -65,11 +94,14 @@
       </div><!-- h2Img -->
   </div><!-- wrapper -->
   </section>
-  
+
   <footer>
     <p><small>&copy;2021&nbsp;MoriMayuko</small></p>
   </footer>
-
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <!--自作のJS-->
+  <script src="js/9-1-6.js"></script>
 </body>
 
 </html>
