フォントサイズ変更

--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -54,8 +54,8 @@
         </div><!-- ここまでworkWrapp__list -->
 
         <!-- viewmoreボタン -->
-        <a href="" class="viewMore">viewMore>></a>
-      </section><!-- ここまでworkWrapp -->
+        <!-- <a href="" class="viewMore">viewMore>></a>
+      </section>ここまでworkWrapp -->
 
       <!-- skill -->
       <!-- h2に画像配置 -->
@@ -99,8 +99,8 @@
         </div>
 
         <!-- viewmoreボタン -->
-        <a href="" class="viewMore">viewMore>></a>
-      </section>
+        <!-- <a href="" class="viewMore">viewMore>></a>
+      </section> -->
 
       <!-- about -->
       <!-- h2に画像配置 -->
