--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -17,20 +17,25 @@
   <header class="headerTop">
     <!-- トップ画像 -->
     <div class="headerTop__img">
-      <h1><a href="#">morimayuko&nbsp;portfolio</a></h1>
-    </div><!-- headerTop__img -->
+      <h1><a href="about.html">mori<br>mayuko&nbsp;</a></h1>
+      <div class="indent">portfolio</div>
+      <a class="scroll" href="#next-section">
+        <span></span>
+      </a>
+  </header>
+  <!-- headerTop__img -->
 
-    <!-- gnavのwrapper -->
-    <div class="gnav">
-      <!-- flex親要素 -->
-      <ul class="gnav__link">
-        <!-- flex子要素 -->
-        <li class="gnav__item"><a href="#">work</a></li>
-        <li class="gnav__item"><a href="#">skill</a></li>
-        <li class="gnav__item"><a href="#">about</a></li>
-        <li class="gnav__item"><a href="#">contact</a></li>
-      </ul><!-- .gnav__link -->
-    </div><!-- .gnav -->
+  <!-- gnavのwrapper -->
+  <div class="gnav">
+    <!-- flex親要素 -->
+    <ul class="gnav__link">
+      <!-- flex子要素 -->
+      <li class="gnav__item"><a href="#">work</a></li>
+      <li class="gnav__item"><a href="#">skill</a></li>
+      <li class="gnav__item"><a href="#">about</a></li>
+      <li class="gnav__item"><a href="#">contact</a></li>
+    </ul><!-- .gnav__link -->
+  </div><!-- .gnav -->
   </header><!-- #headerTop -->
 
   <!-- 全体の幅指定と中央寄せ -->
@@ -57,81 +62,83 @@
         <!-- <a href="" class="viewMore">viewMore>></a>
       </section>ここまでworkWrapp -->
 
-      <!-- skill -->
-      <!-- h2に画像配置 -->
-      <div class="h2Img__skill">
-        <h2 class="head2 h2Img__item">skill</h2>
-      </div><!-- h2Img -->
+        <!-- skill -->
+        <!-- h2に画像配置 -->
+        <div class="h2Img__skill">
+          <h2 class="head2 h2Img__item">skill</h2>
+        </div><!-- h2Img -->
 
-      <!-- スキルgrid -->
-      <section id="skill" class="skillBox centerBox">
-        <div class="skill__list">
-          <div class="skill__list--item">
-            <img src="/images/htmlcss.gif" alt=""></div>
-          <div class="skill__list--item">html5&nbsp;/&nbsp;css3</div>
-          <div class="skill__list--item"><img src="/images/scss.gif" alt=""></div>
-          <div class="skill__list--item">Scss</div>
-          <div class="skill__list--item"><img src="/images/javascript.gif" alt=""></div>
-          <div class="skill__list--item">JavaScript</div>
-          <div class="skill__list--item"><img src="/images/jquery.gif" alt=""></div>
-          <div class="skill__list--item">JQuery</div>
-          <div class="skill__list--item"><img src="/images/wordpress.gif" alt=""></div>
-          <div class="skill__list--item">WordPress</div>
-          <div class="skill__list--item"><img src="/images/php.gif" alt=""></div>
-          <div class="skill__list--item">PHP</div>
-          <div class="skill__list--item"><img src="/images/photoshop.gif" alt=""></div>
-          <div class="skill__list--item">Photoshop</div>
-          <div class="skill__list--item"><img src="/images/illustrator.gif" alt=""></div>
-          <div class="skill__list--item">illastlator</div>
-          <div class="skill__list--item"><img src="/images/xd.gif" alt=""></div>
-          <div class="skill__list--item">Xd</div>
-          <div class="skill__list--item"><img src="/images/exel.gif" alt=""></div>
-          <div class="skill__list--item">Exel</div>
-          <div class="skill__list--item"><img src="/images/powerpoint.gif" alt=""></div>
-          <div class="skill__list--item">PowerPoint</div>
-          <div class="skill__list--item"><img src="/images/word.gif" alt=""></div>
-          <div class="skill__list--item">Word</div>
-          <div class="skill__list--item"><img src="/images/premierepro.gif" alt=""></div>
-          <div class="skill__list--item">PremierePro</div>
-          <div class="skill__list--item"><img src="/images/responsive.gif" alt="" class="res"></div>
-          <div class="skill__list--item">Responsive</div>
+        <!-- スキルgrid -->
+        <section id="skill" class="skillBox centerBox">
+          <div class="skill__list">
+            <div class="skill__list--item">
+              <img src="/images/htmlcss.gif" alt=""></div>
+            <div class="skill__list--item">html5&nbsp;/&nbsp;css3</div>
+            <div class="skill__list--item"><img src="/images/scss.gif" alt=""></div>
+            <div class="skill__list--item">Scss</div>
+            <div class="skill__list--item"><img src="/images/javascript.gif" alt=""></div>
+            <div class="skill__list--item">JavaScript</div>
+            <div class="skill__list--item"><img src="/images/jquery.gif" alt=""></div>
+            <div class="skill__list--item">JQuery</div>
+            <div class="skill__list--item"><img src="/images/wordpress.gif" alt=""></div>
+            <div class="skill__list--item">WordPress</div>
+            <div class="skill__list--item"><img src="/images/php.gif" alt=""></div>
+            <div class="skill__list--item">PHP</div>
+            <div class="skill__list--item"><img src="/images/photoshop.gif" alt=""></div>
+            <div class="skill__list--item">Photoshop</div>
+            <div class="skill__list--item"><img src="/images/illustrator.gif" alt=""></div>
+            <div class="skill__list--item">illastlator</div>
+            <div class="skill__list--item"><img src="/images/xd.gif" alt=""></div>
+            <div class="skill__list--item">Xd</div>
+            <div class="skill__list--item"><img src="/images/exel.gif" alt=""></div>
+            <div class="skill__list--item">Exel</div>
+            <div class="skill__list--item"><img src="/images/powerpoint.gif" alt=""></div>
+            <div class="skill__list--item">PowerPoint</div>
+            <div class="skill__list--item"><img src="/images/word.gif" alt=""></div>
+            <div class="skill__list--item">Word</div>
+            <div class="skill__list--item"><img src="/images/premierepro.gif" alt=""></div>
+            <div class="skill__list--item">PremierePro</div>
+            <div class="skill__list--item"><img src="/images/responsive.gif" alt="" class="res"></div>
+            <div class="skill__list--item">Responsive</div>
 
-        </div>
+          </div>
 
-        <!-- viewmoreボタン -->
-        <!-- <a href="" class="viewMore">viewMore>></a>
+          <!-- viewmoreボタン -->
+          <!-- <a href="" class="viewMore">viewMore>></a>
       </section> -->
 
-      <!-- about -->
-      <!-- h2に画像配置 -->
-      <div class="h2Img__about">
-        <h2 class="head2 h2Img__item">about</h2>
-      </div><!-- h2Img -->
+          <!-- about -->
+          <!-- h2に画像配置 -->
+          <div class="h2Img__about">
+            <h2 class="head2 h2Img__item">about</h2>
+          </div><!-- h2Img -->
 
-      <section id="about" class="aboutBox centerBox">
-        <!-- grid親 -->
-        <div class="about__list">
-          <!-- grid子 -->
-          <img src="/images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
+          <section id="about" class="aboutBox centerBox">
+            <!-- grid親 -->
+            <div class="about__list">
+              <!-- grid子 -->
+              <img src="/images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
 
-          <div class="aboutBox__list--item">
-            <p class="about__list--text">モリマユコ自己紹介</p>
-          </div><!-- aboutBox__list--item -->
-        </div><!-- .about__list -->
+              <div class="aboutBox__list--item">
+                <p class="about__list--text">モリマユコ自己紹介</p>
+              </div><!-- aboutBox__list--item -->
+            </div><!-- .about__list -->
 
-        <!-- viewmoreボタン -->
-        <a href="" class="viewMore">viewMore>></a>
-      </section><!-- #aboutBox .boutBox -->
-      <!-- h2に画像配置 -->
-      <div class="h2Img__contact">
-        <h2 class="head2 h2Img__item">contact</h2>
-      </div><!-- h2Img -->
-      <section id="contact" class="cbtBox centerBox">
-        <p class="thanks">Thank you for waching!<br>
-          Contact is here!</p>
-        <!-- viewmoreボタン -->
-        <a href="" class="viewMore">viewMore>></a>
-      </section>
+            <!-- viewmoreボタン -->
+            <a href="" class="btn btn-flat"><span>PUSH</span></a>
+  
+          </section><!-- #aboutBox .boutBox -->
+          <!-- h2に画像配置 -->
+          <div class="h2Img__contact">
+            <h2 class="head2 h2Img__item">contact</h2>
+          </div><!-- h2Img -->
+          <section id="contact" class="cbtBox centerBox">
+            <p class="thanks">Thank you for waching!<br>
+              Contact is here!</p>
+            <!-- viewmoreボタン -->
+            <!-- <a href="" class="viewMore">viewMore>></a> -->
+            <a href="" class="btn btn-flat"><span>PUSH</span></a>
+          </section>
     </main>
   </div><!-- wrapper -->
 
