--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -15,8 +15,11 @@
 <body>
   <!-- ヘッダー -->
   <header class="headerTop">
+
     <!-- トップ画像 -->
     <div class="headerTop__img">
+      <!-- ハンバーガー -->
+
       <h1><a href="about.html">mori<br>mayuko&nbsp;</a></h1>
       <div class="indent">portfolio</div>
       <a class="scroll" href="#next-section">
@@ -30,10 +33,10 @@
     <!-- flex親要素 -->
     <ul class="gnav__link">
       <!-- flex子要素 -->
-      <li class="gnav__item"><a href="#">work</a></li>
-      <li class="gnav__item"><a href="#">skill</a></li>
-      <li class="gnav__item"><a href="#">about</a></li>
-      <li class="gnav__item"><a href="#">contact</a></li>
+      <li class="gnav__item"><a class="my-parts" href="#">work</a></li>
+      <li class="gnav__item"><a class="my-parts" href="#">skill</a></li>
+      <li class="gnav__item"><a class="my-parts" href="#">about</a></li>
+      <li class="gnav__item"><a class="my-parts" href="#">contact</a></li>
     </ul><!-- .gnav__link -->
   </div><!-- .gnav -->
   </header><!-- #headerTop -->
@@ -70,9 +73,9 @@
 
         <!-- スキルgrid -->
         <section id="skill" class="skillBox centerBox">
+          <p class="cateBox">Coding</p>
           <div class="skill__list">
-            <div class="skill__list--item">
-              <img src="/images/htmlcss.gif" alt=""></div>
+            <div class="skill__list--item"><img src="/images/htmlcss.gif" alt=""></div>
             <div class="skill__list--item">html5&nbsp;/&nbsp;css3</div>
             <div class="skill__list--item"><img src="/images/scss.gif" alt=""></div>
             <div class="skill__list--item">Scss</div>
@@ -84,24 +87,37 @@
             <div class="skill__list--item">WordPress</div>
             <div class="skill__list--item"><img src="/images/php.gif" alt=""></div>
             <div class="skill__list--item">PHP</div>
+            <div class="skill__list--item"><img src="/images/responsive.gif" alt="" class="res"></div>
+            <div class="skill__list--item">Responsive</div>
+          </div><!-- skill__list -->
+
+          <p class="cateBox">Design</p>
+          <div class="skill__list">
             <div class="skill__list--item"><img src="/images/photoshop.gif" alt=""></div>
             <div class="skill__list--item">Photoshop</div>
             <div class="skill__list--item"><img src="/images/illustrator.gif" alt=""></div>
             <div class="skill__list--item">illastlator</div>
             <div class="skill__list--item"><img src="/images/xd.gif" alt=""></div>
             <div class="skill__list--item">Xd</div>
+          </div><!-- skill__list -->
+
+          <p class="cateBox">Office</p>
+          <div class="skill__list">
             <div class="skill__list--item"><img src="/images/exel.gif" alt=""></div>
             <div class="skill__list--item">Exel</div>
             <div class="skill__list--item"><img src="/images/powerpoint.gif" alt=""></div>
             <div class="skill__list--item">PowerPoint</div>
             <div class="skill__list--item"><img src="/images/word.gif" alt=""></div>
             <div class="skill__list--item">Word</div>
+          </div>
+          <p class="cateBox">Movie</p>
+          <div class="skill__list">
             <div class="skill__list--item"><img src="/images/premierepro.gif" alt=""></div>
             <div class="skill__list--item">PremierePro</div>
-            <div class="skill__list--item"><img src="/images/responsive.gif" alt="" class="res"></div>
-            <div class="skill__list--item">Responsive</div>
-
           </div>
+
+
+
 
           <!-- viewmoreボタン -->
           <!-- <a href="" class="viewMore">viewMore>></a>
@@ -120,13 +136,23 @@
               <img src="/images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
 
               <div class="aboutBox__list--item">
-                <p class="about__list--text">モリマユコ自己紹介</p>
+                <p class="about__list--text">広島でWeb制作を勉強している28歳女性。<br>
+                  偶然知った応募締め切り2日前の求職者支援訓練。なんとか滑り込み合格を果たす。<br>
+                  地元は栃木県。栃木最後の居住地は宇都宮だったので（栃木の中では一番都会）、 <br>
+                  自分は都会寄りの人間だと思っていた節がある。広島の都会ぶりにただただ圧倒された田舎者。<br></p>
+                <!-- 趣味はお金を使うこと。将来の夢はバリキャリの独身貴族。<br>
+              大恋愛の末広島にやってきたが、見事に大破局。<br>
+              さらに新型コロナウィルスの大流行により、勤務していた店舗も閉店。<br>
+              長年接客販売に従事してきたが、色々タイミングが重なったことで自分のキャリアについて考え直す。<br>
+                  無職ついでにと勉強しだしたプログラミングに見事ハマり、ガツガツ独学を進めるが行き詰まる。<br>
+                  そんな折に偶然知った求職者支援訓練。応募締め切り2日前。滑り込み合格を果たす。　<br> -->
+            
               </div><!-- aboutBox__list--item -->
             </div><!-- .about__list -->
 
             <!-- viewmoreボタン -->
             <a href="" class="btn btn-flat"><span>PUSH</span></a>
-  
+
           </section><!-- #aboutBox .boutBox -->
           <!-- h2に画像配置 -->
           <div class="h2Img__contact">
@@ -135,16 +161,42 @@
           <section id="contact" class="cbtBox centerBox">
             <p class="thanks">Thank you for waching!<br>
               Contact is here!</p>
+
+            <!-- ここからコンタクトページ -->
+            <form action="">
+              <!-- コンタクトflex親 -->
+              <div class="cbtBox__flex">
+                <!-- コンタクトflex子 -->
+                <div class="cbtBox__flex--item">
+                  <label for="name">Name</label>
+                  <input type="text" name="name" size="20" required>
+                </div><!-- cbtBox__flex--item -->
+                <div class="cbtBox__flex--item">
+                  <label for="email">Email</label>
+                  <input type="text" name="email" required>
+                </div><!-- cbtBox__flex--item -->
+                <div class="cbtBox__flex--item">
+                  <label for="message">Message</label>
+                  <textarea rows="4" cols="30" required></textarea>
+                </div><!-- cbtBox__flex--item -->
+
+                <div class="submitBtn"><input type="submit" name="submit">
+                  <a href="" class="btn btn-flat"><span>Submit</span></a></div>
+
+              </div><!-- cbtBox__flex -->
+            </form>
             <!-- viewmoreボタン -->
             <!-- <a href="" class="viewMore">viewMore>></a> -->
-            <a href="" class="btn btn-flat"><span>PUSH</span></a>
-          </section>
+            <!-- <a href="" class="btn btn-flat"><span>Submit</span></a>
+          </section> -->
     </main>
+  </div>
   </div><!-- wrapper -->
 
   <footer>
     <p><small>&copy;2021&nbsp;MoriMayuko</small></p>
   </footer>
+  <!-- <script src="/js/"></script> -->
 </body>
 
 </html>
