--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/mediaq.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <title>morimayuko portfolio</title>
@@ -74,7 +75,7 @@
         <!-- スキルgrid -->
         <section id="skill" class="skillBox centerBox">
           <p class="cateBox">Coding</p>
-          <div class="skill__list">
+          <div class="skill__list part2">
             <div class="skill__list--item"><img src="/images/htmlcss.gif" alt=""></div>
             <div class="skill__list--item">html5&nbsp;/&nbsp;css3</div>
             <div class="skill__list--item"><img src="/images/scss.gif" alt=""></div>
@@ -92,7 +93,7 @@
           </div><!-- skill__list -->
 
           <p class="cateBox">Design</p>
-          <div class="skill__list">
+          <div class="skill__list part2">
             <div class="skill__list--item"><img src="/images/photoshop.gif" alt=""></div>
             <div class="skill__list--item">Photoshop</div>
             <div class="skill__list--item"><img src="/images/illustrator.gif" alt=""></div>
@@ -116,78 +117,78 @@
             <div class="skill__list--item">PremierePro</div>
           </div>
 
+        </section>
+        <!-- about -->
+        <!-- h2に画像配置 -->
+        <div class="h2Img__about">
+          <h2 class="head2 h2Img__item">about</h2>
+        </div><!-- h2Img -->
 
+        <section id="about" class="aboutBox centerBox">
+          <!-- grid親 -->
+          <div class="about__list">
+            <!-- grid子 -->
+            <img src="/images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
 
+            <div class="about__list--item">
+              <p class="about__list--text">広島でWeb制作を勉強している28歳女性。</p>
+              <p>偶然知った応募締め切り2日前の求職者支援訓練。なんとか滑り込み合格を果たす。</p>
+              <p>地元は栃木県。栃木最後の居住地は宇都宮だったので（栃木の中では一番都会）、
+                自分は都会寄りの人間だと思っていた節がある。広島の都会ぶりにただただ圧倒された田舎者。</p>
+              <p>趣味はお金を使うこと。将来の夢はバリキャリの独身貴族。</p>
+              <p>大恋愛の末広島にやってきたが、見事に大破局。</p>
+              <p>さらに新型コロナウィルスの大流行により、勤務していた店舗も閉店。</p>
+              <p>長年接客販売に従事してきたが、色々タイミングが重なったことで自分のキャリアについて考え直す。</p>
+              <p>無職ついでにと勉強しだしたプログラミングに見事ハマり、ガツガツ独学を進めるが行き詰まる。</p>
+              <p>そんな折に偶然知った求職者支援訓練。応募締め切り2日前。滑り込み合格を果たす。</p>
+            </div><!-- aboutBox__list--item -->
+          </div><!-- .about__list -->
+          <p class="about__list--like">
+            Like
+          </p>
+          <div class="about__list--likes">
+            <div class="about__list--likes--1"><img src="/images/s2.jpg" alt="" class="s2"></div>
+            <p class="ebi">えび</p>
+          </div>
 
           <!-- viewmoreボタン -->
-          <!-- <a href="" class="viewMore">viewMore>></a>
-      </section> -->
+          <a href="" class="btn btn-flat"><span>PUSH</span></a>
 
-          <!-- about -->
-          <!-- h2に画像配置 -->
-          <div class="h2Img__about">
-            <h2 class="head2 h2Img__item">about</h2>
-          </div><!-- h2Img -->
+        </section><!-- #aboutBox .boutBox -->
+        <!-- h2に画像配置 -->
+        <div class="h2Img__contact">
+          <h2 class="head2 h2Img__item">contact</h2>
+        </div><!-- h2Img -->
+        <section id="contact" class="cbtBox centerBox">
+          <p class="thanks">Thank you for waching!<br>
+            Contact is here!</p>
 
-          <section id="about" class="aboutBox centerBox">
-            <!-- grid親 -->
-            <div class="about__list">
-              <!-- grid子 -->
-              <img src="/images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
+          <!-- ここからコンタクトページ -->
+          <form action="">
+            <!-- コンタクトflex親 -->
+            <div class="cbtBox__flex">
+              <!-- コンタクトflex子 -->
+              <div class="cbtBox__flex--item">
+                <label for="name">Name</label>
+                <input type="text" name="name" size="20" required>
+              </div><!-- cbtBox__flex--item -->
+              <div class="cbtBox__flex--item">
+                <label for="email">Email</label>
+                <input type="text" name="email" required>
+              </div><!-- cbtBox__flex--item -->
+              <div class="cbtBox__flex--item">
+                <label for="message">Message</label>
+                <textarea rows="4" cols="30" required></textarea>
+              </div><!-- cbtBox__flex--item -->
 
-              <div class="aboutBox__list--item">
-                <p class="about__list--text">広島でWeb制作を勉強している28歳女性。<br>
-                  偶然知った応募締め切り2日前の求職者支援訓練。なんとか滑り込み合格を果たす。<br>
-                  地元は栃木県。栃木最後の居住地は宇都宮だったので（栃木の中では一番都会）、 <br>
-                  自分は都会寄りの人間だと思っていた節がある。広島の都会ぶりにただただ圧倒された田舎者。<br></p>
-                <!-- 趣味はお金を使うこと。将来の夢はバリキャリの独身貴族。<br>
-              大恋愛の末広島にやってきたが、見事に大破局。<br>
-              さらに新型コロナウィルスの大流行により、勤務していた店舗も閉店。<br>
-              長年接客販売に従事してきたが、色々タイミングが重なったことで自分のキャリアについて考え直す。<br>
-                  無職ついでにと勉強しだしたプログラミングに見事ハマり、ガツガツ独学を進めるが行き詰まる。<br>
-                  そんな折に偶然知った求職者支援訓練。応募締め切り2日前。滑り込み合格を果たす。　<br> -->
-            
-              </div><!-- aboutBox__list--item -->
-            </div><!-- .about__list -->
+              <div class="submitBtn"><input type="submit" name="submit">
+                <a href="" class="btn btn-flat"><span>Submit</span></a></div>
 
-            <!-- viewmoreボタン -->
-            <a href="" class="btn btn-flat"><span>PUSH</span></a>
-
-          </section><!-- #aboutBox .boutBox -->
-          <!-- h2に画像配置 -->
-          <div class="h2Img__contact">
-            <h2 class="head2 h2Img__item">contact</h2>
-          </div><!-- h2Img -->
-          <section id="contact" class="cbtBox centerBox">
-            <p class="thanks">Thank you for waching!<br>
-              Contact is here!</p>
-
-            <!-- ここからコンタクトページ -->
-            <form action="">
-              <!-- コンタクトflex親 -->
-              <div class="cbtBox__flex">
-                <!-- コンタクトflex子 -->
-                <div class="cbtBox__flex--item">
-                  <label for="name">Name</label>
-                  <input type="text" name="name" size="20" required>
-                </div><!-- cbtBox__flex--item -->
-                <div class="cbtBox__flex--item">
-                  <label for="email">Email</label>
-                  <input type="text" name="email" required>
-                </div><!-- cbtBox__flex--item -->
-                <div class="cbtBox__flex--item">
-                  <label for="message">Message</label>
-                  <textarea rows="4" cols="30" required></textarea>
-                </div><!-- cbtBox__flex--item -->
-
-                <div class="submitBtn"><input type="submit" name="submit">
-                  <a href="" class="btn btn-flat"><span>Submit</span></a></div>
-
-              </div><!-- cbtBox__flex -->
-            </form>
-            <!-- viewmoreボタン -->
-            <!-- <a href="" class="viewMore">viewMore>></a> -->
-            <!-- <a href="" class="btn btn-flat"><span>Submit</span></a>
+            </div><!-- cbtBox__flex -->
+          </form>
+          <!-- viewmoreボタン -->
+          <!-- <a href="" class="viewMore">viewMore>></a> -->
+          <!-- <a href="" class="btn btn-flat"><span>Submit</span></a>
           </section> -->
     </main>
   </div>
