--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -6,16 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <!-- <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
-  <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css"> -->
+  <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
+  <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="/css/style.css">
-<<<<<<< Updated upstream
   <link rel="stylesheet" href="/css/mediaq.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
-=======
 
->>>>>>> Stashed changes
+
   <title>morimayuko portfolio</title>
 </head>
 
@@ -193,10 +191,6 @@
             </div><!-- cbtBox__flex -->
           </form>
           <!-- viewmoreボタン -->
-<<<<<<< Updated upstream
-          <!-- <a href="" class="viewMore">viewMore>></a> -->
-          <!-- <a href="" class="btn btn-flat"><span>Submit</span></a>
-=======
           <!-- <a href="" class="viewMore">viewMore>></a>
       </section> -->
 
