--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/mediaq.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
 
@@ -32,7 +31,7 @@
     <div class="headerTop__img">
       <!-- ハンバーガー -->
 
-      <h1><a href="about.html">mori<br>mayuko&nbsp;</a></h1>
+      <h1><a href="#index.html">mori<br>mayuko&nbsp;</a></h1>
       <div class="indent">portfolio</div>
       <a class="scroll" href="#next-section">
         <span></span>
@@ -45,10 +44,9 @@
     <!-- flex親要素 -->
     <ul class="gnav__link">
       <!-- flex子要素 -->
-      <li class="gnav__item"><a class="my-parts" href="#">work</a></li>
-      <li class="gnav__item"><a class="my-parts" href="#">skill</a></li>
-      <li class="gnav__item"><a class="my-parts" href="#">about</a></li>
-      <li class="gnav__item"><a class="my-parts" href="#">contact</a></li>
+      <li class="gnav__item"><a class="my-parts" href="#skill">skill</a></li>
+      <li class="gnav__item"><a class="my-parts" href="#about">about</a></li>
+      <li class="gnav__item"><a class="my-parts" href="#contact">contact</a></li>
     </ul><!-- .gnav__link -->
   </div><!-- .gnav -->
   </header><!-- #headerTop -->
@@ -59,19 +57,9 @@
 
       <!-- work -->
       <!-- h2に画像配置 -->
-      <div class="h2Img">
+      <!-- <div class="h2Img">
         <h2 class="head2 h2Img__item">work</h2>
-      </div><!-- h2Img -->
-
-      <!-- モックアップ -->
-      <section id="work" class="workBox centerBox">
-        <!-- flex親 -->
-        <div class="workBox__list">
-          <div class="workBox__list--item"><img src="/images/pc_mobile_image.jpg" alt="" class="workBox__list--item">
-          </div>
-          <div class="workBox__list--item"><img src="/images/pc_mobile_image.jpg" alt="" class="workBox__list--item">
-          </div>
-        </div><!-- ここまでworkWrapp__list -->
+      </div>h2Img -->
 
         <!-- viewmoreボタン -->
         <!-- <a href="" class="viewMore">viewMore>></a>
@@ -159,14 +147,16 @@
             <!-- <div class="about__list--likes--1"> -->
               <img src="/images/s2.jpg" alt="" class="s2">
             <!-- </div> -->
-            <p class="aboutLike">食べること。おしゃれに勤しむこと。おしゃべりすること。家でボーっとすること。<br>
+            <p class="aboutLike">食べること。おしゃれに勤しむこと。おしゃべりすること。家でボーっとすることが好きです。<br>
               好奇心旺盛なので新しいことが大好きです。<br>
               それだけではなく、新しい出会いや人間関係も楽しいと感じるタイプです。<br>
-            </p>
+            最近では勉強したことをアウトプットして、出来ることが増えていくのを感じてウキウキしています。<br>
+          </p>
+          
           </div>
           
           <!-- viewmoreボタン -->
-          <a href="" class="btn btn-flat"><span>PUSH</span></a>
+          <a href="about.html" class="btn btn-flat"><span>PUSH</span></a>
 
         </section><!-- #aboutBox .boutBox -->
         <!-- h2に画像配置 -->
